updated lovecraft logo title png

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <!--Page Header-->
         <header>
-            <h1><img src="/assets/lovecraftcountry2resized.jpg" alt="Lovecraft-Country"></h1>
+            <h1><img src="assets/Lovecraft-country-tv-logo.png" alt="Lovecraft-Country"></h1>
             <p class="lead">Lovecraft Country follows one man’s journey across 1950s Jim Crow America. 
                 A road trip in search of his missing father turns into a fight to survive racist terrors and Lovecraftian monsters.</p>
             <button>Watch</button>
